--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,10 @@ dependencies:
   intl: ^0.19.0
   # For Splash Screen
   flutter_native_splash: ^2.4.5
+  # for SVG render images
+  flutter_svg: ^2.0.17
+  # for adoptive screen and font size
+  flutter_screenutil: ^5.9.3
 
 
 
