--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,7 +89,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/svg/
+    - assets/svgs/
     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
